--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -1,7 +1,7 @@
 .row {
   color: white;
   margin-left: 20px;
-  overflow-x: hidden; /* Hide horizontal overflow */
+  overflow-x: hidden;
 }
 
 h2 {
@@ -48,9 +48,9 @@ h2 {
 
 .row__posters {
   display: flex;
-  overflow-x: auto; /* Enable horizontal scrolling */
+  overflow-x: auto;
   padding: 20px;
-  margin: 0 -20px; /* Counteract the negative margin on slick-list */
+  margin: 0 -20px;
 }
 
 .row__poster,
